--- a/index.html
+++ b/index.html
@@ -3,31 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Operator11 - Coming Soon</title>
+    <title>Operator11</title>
     <style>
         body {
-            background-color: lightsteelblue;
-            color: steelblue;
-            font-family: Arial, sans-serif;
-            text-align: center;
+            background-color: steelblue;
+            color: white;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            height: 100lvh;
+            overflow: hidden;
             margin: 0;
         }
         .logo {
-            max-width: 200px;
-        }
-        .message {
-            font-size: 24px;
-            margin-top: 20px;
+            width: 75%;
+            max-width: 500px;
         }
     </style>
 </head>
 <body>
-    <img src="op11.png" alt="Operator11 Logo" class="logo">
-    <div class="message">We're working on something great. Stay tuned!</div>
+    <img src="op11.png" alt="Operator11 Logo (Ethan M)" class="logo">
 </body>
 </html>
